updated app, requirements and models

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 pytest==6.2.5
-Flask==1.0.2
+Flask==2.0.3
 Flask-SQLAlchemy==2.4.0
 SQLAlchemy==1.3.20
 Flask-Cors==3.0.8
 flask_migrate
+psycopg2
+flask_moment
