--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-pytest==6.2.5
-Flask==1.0.2
-Flask-SQLAlchemy==2.4.0
-SQLAlchemy==1.3.20
-Flask-Cors==3.0.8
+pytest
+markupsafe==2.0.1
+Flask==1.1.4
+psycopg2
+Flask-SQLAlchemy
+SQLAlchemy
+Flask-Cors
 flask_migrate
